<resources>
    <string name="app_name">Play</string>

    <string name="host_game">HOST GAME</string>
    <string name="join_game">JOIN GAME</string>

    <string name="which">which</string>

    <string name="payload_id">payloadId</string>
    <string name="endpoint_id">mEndPointId</string>
    <string name="user_id">playerId</string>
    <string name="user_name">playerName</string>
    <string name="user_desc">playerDesc</string>
    <string name="user_exp">playerExp</string>
    <string name="user_img">playerImage</string>
    <string name="password">password</string>

    <string name="num">number</string>
    <string name="trun_boolean">turnBool</string>
    <string name="status">statusBool</string>
    <string name="win_boolean">winnerBool</string>

    <string name="pref_name">Jhony Jester</string>
    <string name="pref_name_key">name_key</string>
    <string name="pref_name_summary">User Name</string>
    <string name="pref_name_title">Player Name</string>

    <string name="pref_rotation_key">rotation_key</string>
    <string name="pref_rotation_summary">Change rotation pref</string>
    <string name="pref_rotation_title">Rotation</string>

    <string name="pref_music_key">music_key</string>
    <string name="pref_music_summary">Put music on or off</string>
    <string name="pref_music_title">Music</string>

    <string name="pref_sound_key">sound_key</string>
    <string name="pref_sound_summary">Put sound on or off</string>
    <string name="pref_sound_title">Sound</string>

    <string name="pref_vibration_key">vib_key</string>
    <string name="pref_vibration_summary">Put vibration on or off</string>
    <string name="pref_vibration_title">Vibration</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
